--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "dependencies": {
     "@material-ui/core": "^4.11.3",
+    "@material-ui/data-grid": "^4.0.0-alpha.29",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.4",
@@ -11,6 +12,7 @@
     "@testing-library/user-event": "^12.1.10",
     "avataaars": "^1.2.2",
     "axios": "^0.21.1",
+    "bad-words": "^3.0.4",
     "cryptr": "^6.0.2",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
